force-app/main/default/objects/Days__c/Days__c.object-meta.xml
<CustomObject>
    <label>Days</label>
    <nameField>
        <label>Days Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>