force-app/main/default/objects/Days__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lunes</fullName>
            </value>
            <value>
                <fullName>Martes</fullName>
            </value>
            <value>
                <fullName>Miercoles</fullName>
            </value>
            <value>
                <fullName>Jueves</fullName>
            </value>
            <value>
                <fullName>Viernes</fullName>
            </value>
            <value>
                <fullName>Sabado</fullName>
            </value>
            <value>
                <fullName>Domingo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>