force-app/main/default/objects/Days__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hour</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>08:00 a 09:00 am</fullName>
                <default>true</default>
                <label>08:00 a 09:00 am</label>
            </value>
            <value>
                <fullName>09:00 a 10:00 am</fullName>
            </value>
            <value>
                <fullName>10:00 a 11:00 am</fullName>
            </value>
            <value>
                <fullName>11:00 a 12:00 am</fullName>
            </value>
            <value>
                <fullName>12:00 a 01:00 pm</fullName>
            </value>
            <value>
                <fullName>01:00 a 02:00 pm</fullName>
            </value>
            <value>
                <fullName>02:00 a 03:00 pm</fullName>
            </value>
            <value>
                <fullName>03:00 a 04:00 pm</fullName>
            </value>
            <value>
                <fullName>04:00 a 05:00 pm</fullName>
            </value>
            <value>
                <fullName>05:00 a 06:00 pm</fullName>
            </value>
            <value>
                <fullName>06:00 a 07:00 pm</fullName>
            </value>
            <value>
                <fullName>07:00 a 08:00 pm</fullName>
            </value>
            <value>
                <fullName>08:00 a 09:00 pm</fullName>
            </value>
            <value>
                <fullName>09:00 a 10:00 pm</fullName>
            </value>
            <value>
                <fullName>10:00 a 11:00 pm</fullName>
            </value>
            <value>
                <fullName>11:00 a 12:00 pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>